.. -*- restructuredtext -*-

This file describes user-visible changes between pockets versions.

Version 0.1 (2015-02-10)
------------------------

* Initial version.