@@ -1,0 +1,1 @@
+Pockets is written and maintained by Rob Ruana <rob@robruana.com>.
