@@ -1,4 +1,4 @@
-Copyright (c) 2015, Rob Ruana 
+Copyright (c) 2015, by the Pockets team, see AUTHORS.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
