@@ -1,6 +1,7 @@
 include README.rst
 include LICENSE
 include CHANGES
+include AUTHORS
 include requirements.txt
 include requirements_docs.txt
 include requirements_test.txt
